[chromium] Fix navigation start time on cross-renderer navigation https://bugs.webkit.org/show_bug.cgi?id=75922

Reviewed by Darin Fisher.

Source/WebCore:

* loader/DocumentLoadTiming.cpp:
(WebCore::DocumentLoadTiming::setNavigationStart): Added.
* loader/DocumentLoadTiming.h:

Source/WebKit/chromium:

* public/WebDataSource.h:
* src/WebDataSource.cpp:
(WebKit::WebDataSource::setNavigationStartTime): Added.
* src/WebDataSource.h:


Canonical link: https://commits.webkit.org/97053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109300 268f45cc-cd09-0410-ab3c-d52691b4dbfc