Source/WebKit/chromium/public/WebDataSource.h
@@ -103,6 +103,14 @@ public:
     // testing.
     virtual void setDeferMainResourceDataLoad(bool) = 0;
 
+    // Sets the navigation start time for this datasource. Ordinarily,
+    // navigation start is determined in WebCore. But, in some situations,
+    // the embedder might have a better value and can override it here. This
+    // should be called before WebFrameClient::didCommitProvisionalLoad.
+    // Calling it later may confuse users, because JavaScript may have run and
+    // the user may have already recorded the original value.
+    virtual void setNavigationStartTime(double) = 0;
+
 protected:
     ~WebDataSource() { }
 };
