Source/WebKit/chromium/src/WebDataSourceImpl.h
@@ -70,6 +70,7 @@ public:
     virtual void setExtraData(ExtraData*);
     virtual WebApplicationCacheHost* applicationCacheHost();
     virtual void setDeferMainResourceDataLoad(bool);
+    virtual void setNavigationStartTime(double);
 
     static WebNavigationType toWebNavigationType(WebCore::NavigationType type);
 
